--- a/22july/Untitled.ipynb
+++ b/22july/Untitled.ipynb
@@ -3,12 +3,158 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3caed6e9",
+   "id": "aa94bc1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#203"
+    "#203\n",
+    "a, b, c = map(int, input().split())\n",
+    "\n",
+    "if a == b & b == c:\n",
+    "    print(a)\n",
+    "elif a == b:\n",
+    "    print(c)\n",
+    "elif b== c:\n",
+    "    print(a)\n",
+    "elif c==a:\n",
+    "    print(b)\n",
+    "else:\n",
+    "    print(\"0\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c09bbcb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, K   = map(int, input().split())\n",
+    "\n",
+    "\n",
+    "ksum = 0\n",
+    "for i in range(1, K+1):\n",
+    "    ksum += i \n",
+    "\n",
+    "nsum = 0\n",
+    "for n in range(1, N+1):\n",
+    "    nsum2 = n*100\n",
+    "    nsum1 = nsum2*K\n",
+    "    nsum += nsum1\n",
+    "    \n",
+    "\n",
+    "ans = ksum*N + nsum\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17023d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "\n",
+    "A, B = list(map(int, input().split()))\n",
+    "\n",
+    "#ans village num\n",
+    "\n",
+    "#N friend num\n",
+    "#K  money\n",
+    "#A[i]  friend i num\n",
+    "# B[i]  get money\n",
+    "\n",
+    "vil=0\n",
+    "while K > 0:\n",
+    "    for v in range(0, 10**100):\n",
+    "        K-=1\n",
+    "        vil = v+1\n",
+    "        if vil is in A:\n",
+    "            K+=B[vil]\n",
+    "    \n",
+    "print(vil)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17fa609c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "\n",
+    "friends = []\n",
+    "\n",
+    "for i in range(N):\n",
+    "    A, B = map(int, input().split())\n",
+    "    friends.append([A, B])\n",
+    "\n",
+    "friends.sort()\n",
+    "now_village = 0 \n",
+    "now_village+=K\n",
+    "\n",
+    "for i in range(N):\n",
+    "    friend_village=friends[i][0]\n",
+    "    money=friends[i][1]\n",
+    "\n",
+    "    if friend_village <= now_village:\n",
+    "        now_village += money\n",
+    "    else:\n",
+    "        break;\n",
+    "\n",
+    "print(now_village)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b48ca448",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c069a636",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73d92269",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "583c953e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd6bb790",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc5c32ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
