--- a/22july/Untitled.ipynb
+++ b/22july/Untitled.ipynb
@@ -110,11 +110,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "90cf1635",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N=2\n",
+    "[False]*(N+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b48ca448",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1088523905.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\barualyric\\AppData\\Local\\Temp\\ipykernel_21924\\1088523905.py\"\u001b[1;36m, line \u001b[1;32m30\u001b[0m\n\u001b[1;33m    if visited[to_city] == False\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#204 c\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "#connect is load info\n",
+    "connect = [[] for i in range(N+1)]\n",
+    "\n",
+    "for i in range(M):\n",
+    "    A, B = map(int, input().split())\n",
+    "    connect[A].append(B)\n",
+    "\n",
+    "from collection import deque\n",
+    "#\n",
+    "# start city => arrive city count\n",
+    "\n",
+    "def BFS(start_city):\n",
+    "    \n",
+    "    count = 1\n",
+    "    visited = [False]*(N+1)\n",
+    "\n",
+    "    visited[start_city] = True\n",
+    "\n",
+    "    que = deque()\n",
+    "    que.append(start_city)\n",
+    "    \n",
+    "    while 0<len(que):\n",
+    "        now_city = que.popleft()\n",
+    "\n",
+    "        for to_city in connect[now_city]:\n",
+    "            if visited[to_city] == False:\n",
+    "                count+=1\n",
+    "\n",
+    "                visited[to_city] = True\n",
+    "                que.append(to_city)\n",
+    "    return count\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for x in range(1, N+1):\n",
+    "    ans += BFS(x)\n",
+    "\n",
+    "print(ans)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -174,6 +258,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "08a8b3365c8794cd169c696eb07d244554fc02b68625288d9805fd473ed8453a"
+   }
   }
  },
  "nbformat": 4,
