--- a/22August/cdpython.ipynb
+++ b/22August/cdpython.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -19,9 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '2 3 4 '",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_5152/1663517028.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mT\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreverse\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0msa\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0msA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '2 3 4 '"
+     ]
+    }
+   ],
    "source": [
     "N = int(input())\n",
     "T = list(map(int, input().split()))\n",
@@ -101,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +155,125 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#205 B\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "A = map(list(int, input().split()))\n",
+    "\n",
+    "\n",
+    "\n",
+    "Nlist = [n for n in range(1, N+1)]\n",
+    "A.sort()\n",
+    "\n",
+    "if Nlist == A:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, False, False, False]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers=[False]*(5+1)\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_5152/3714153600.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_5152/3714153600.py\"\u001b[1;36m, line \u001b[1;32m17\u001b[0m\n\u001b[1;33m    if B>=0:else:print(\"<\")\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, B, C = map(int,input().split())\n",
+    "\n",
+    "if C % 2 ==0:\n",
+    "    if abs(A) > abs(B):print(\">\")\n",
+    "    elif abs(A) == abs(B):print(\"=\")\n",
+    "    else:print(\"<\")\n",
+    "\n",
+    "else:\n",
+    "    if A>=0 :\n",
+    "        if B>=0:\n",
+    "            if abs(A) < abs(B):print(\"<\")\n",
+    "            elif abs(A) == abs(B):print(\"=\")\n",
+    "            else:print(\">\")\n",
+    "        else:print(\">\")\n",
+    "\n",
+    "    else:\n",
+    "        if B>=0:print(\"<\")\n",
+    "        else:\n",
+    "            if abs(A)<abs(B):\n",
+    "                print(\">\")\n",
+    "            elif abs(A) == abs(B):\n",
+    "                print(\"=\")\n",
+    "            else:\n",
+    "                print(\"<\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A,B,C=map(int, input().split())\n",
+    "\n",
+    "if C%2==0:\n",
+    "    if abs(A)<abs(B):print(\"<\")\n",
+    "    elif abs(A)==abs(B):print(\"=\")\n",
+    "    else:print(\">\")\n",
+    "else:\n",
+    "    if 0<=A:\n",
+    "        if 0<=B:\n",
+    "            if abs(A)<abs(B):print(\"<\")\n",
+    "            elif abs(A)==abs(B):print(\"=\")\n",
+    "            else:print(\">\")\n",
+    "        else:print(\">\")\n",
+    "    else:\n",
+    "        if 0<=B:print(\"<\")\n",
+    "        else:\n",
+    "            if abs(A)<abs(B):print(\">\")\n",
+    "            elif abs(A)==abs(B):print(\"=\")\n",
+    "            else:print(\"<\")"
+   ]
   }
  ],
  "metadata": {
