--- a/22july/Untitled.ipynb
+++ b/22july/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa94bc1e",
+   "id": "feb01e6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09bbcb2",
+   "id": "5644f55c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17023d67",
+   "id": "dde16c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fa609c",
+   "id": "6ff5553c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "90cf1635",
+   "id": "dbf59df5",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b48ca448",
+   "id": "1964057c",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c069a636",
+   "id": "a9fd3537",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d92269",
+   "id": "57ad01d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "583c953e",
+   "id": "716f8de6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd6bb790",
+   "id": "b1654743",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc5c32ac",
+   "id": "6ef83310",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -243,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
