--- a/22August/cdpython.ipynb
+++ b/22August/cdpython.ipynb
@@ -19,6 +19,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -274,6 +288,463 @@
     "            elif abs(A)==abs(B):print(\"=\")\n",
     "            else:print(\"<\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, Q =map(int, input().split())\n",
+    "\n",
+    "A= [0] + list(map(int, input().split())) + [10**19]\n",
+    "\n",
+    "K=list(map(int))\n",
+    "\n",
+    "query  = []\n",
+    "for q in range(Q):\n",
+    "    query.append([K[q], q])\n",
+    "\n",
+    "query.sort()\n",
+    "\n",
+    "ans = [0]*Q\n",
+    "\n",
+    "order_left = 0\n",
+    "x=0\n",
+    "\n",
+    "for i in range(N+1):\n",
+    "    order_right = order_left + A[i+1]-A[i]-1\n",
+    "\n",
+    "    while x < Q:\n",
+    "        K=query[x][0]\n",
+    "        q=query[x][1]\n",
+    "\n",
+    "        if order_left < K <= order_right:\n",
+    "            ans[q] = A[i]+K-order_right\n",
+    "            x+=1\n",
+    "        \n",
+    "        else:\n",
+    "            order_left = order_right\n",
+    "            break\n",
+    "\n",
+    "for i in ans:\n",
+    "    print(i)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_5152/3011121901.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "for i in 10:\n",
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_14200/3090159242.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "N=10\n",
+    "range(len(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=int(input())\n",
+    " \n",
+    " \n",
+    "ans = 0\n",
+    " \n",
+    "for n in range(1, N+1):\n",
+    "    ans += n\n",
+    "    if ans >= N:\n",
+    "        print(n)\n",
+    "        break\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "ans = 0\n",
+    "Book = [[False]*N]*N\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if i>= j:\n",
+    "            pass\n",
+    "        else:\n",
+    "            if A[i]!=A[j]:\n",
+    "                Book[i][j] = True\n",
+    "                ans+=1\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[False, False, False], [False, False, False], [False, False, False]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "Book=[[False]*3]*3\n",
+    "Book\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = [2,3,4,5,3,1]\n",
+    "lA  = list(set(A))\n",
+    "lA\n",
+    "\n",
+    "\n",
+    "def nCr(n, r):\n",
+    "    nume = factorial(n)\n",
+    "    denomi = factorial(n-r)* factorial(r)\n",
+    "    return nume/denomi\n",
+    "\n",
+    "\n",
+    "print(len(lA))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "factorial() not defined for negative values",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mC:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_14200/1738181698.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mAA\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnCr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mAA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mans\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\BARUAL~1\\AppData\\Local\\Temp/ipykernel_14200/1738181698.py\u001b[0m in \u001b[0;36mnCr\u001b[1;34m(n, r)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mnCr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mnume\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfactorial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m     \u001b[0mdenomi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfactorial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m \u001b[0mfactorial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnume\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mdenomi\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: factorial() not defined for negative values"
+     ]
+    }
+   ],
+   "source": [
+    "N =int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "from math import factorial\n",
+    "def nCr(n, r):\n",
+    "    nume = factorial(n)\n",
+    "    denomi = factorial(n-r)* factorial(r)\n",
+    "    return nume//denomi\n",
+    "\n",
+    "AA  = list(set(A))\n",
+    "ans = nCr(len(AA), 2)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import factorial\n",
+    "ans = nCr(4, 2)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'int'>, {2: 2, 3: 2, 4: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "count = defaultdict(int)\n",
+    "A=[2,3,2,3,4]\n",
+    "for i in range(len(A)):\n",
+    "    count[A[i]]+=1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([2, 2, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(count.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N= int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "from collections import defaultdict\n",
+    "count = defaultdict(int)\n",
+    "\n",
+    "ans = N*(N-1) // 2\n",
+    "\n",
+    "for i in range(len(A)):\n",
+    "    count[A[i]]+=1\n",
+    "\n",
+    "for x in count.values():\n",
+    "    same = x*(x-1)//2\n",
+    "    ans-=same\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = int(input())\n",
+    "t = list(map(int, input().split()))\n",
+    "l = list(map(int, input().split()))\n",
+    "r = list(map(int, input().split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(N):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 206 D UnionFind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class UnionFind:\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "        self.parent_size=[-1]*n\n",
+    "    \n",
+    "    def leader(self, a):\n",
+    "        if self.parent_size[a]<0: return a\n",
+    "        self.parent_size[a]=self.leader(self.parent_size[a])\n",
+    "        return self.parent_size[a]\n",
+    "\n",
+    "    def merge(self, a, b):\n",
+    "        x, y=self.leader(a), self.leader(b)\n",
+    "        if x==y: return\n",
+    "        if abs(self.parent_size[x]<self.parent_size[y]):x, y=y,x\n",
+    "        self.parent_size[x] += self.parent_size[y]\n",
+    "        self.parent_size[y] = x\n",
+    "        return \n",
+    "    \n",
+    "    def same(self, a, b):\n",
+    "        return self.leader(a) == self.leader(b)\n",
+    "\n",
+    "    def size(self, a):\n",
+    "        return abs(self.parent_size[self.leader(a)])\n",
+    "\n",
+    "    def groups(self):\n",
+    "        result = [[] for _ in range(self.n)]\n",
+    "        for i in rane(self.n):\n",
+    "            result[self.leader(i)].append(i)\n",
+    "        return [r for r in result if r != []]\n",
+    "\n",
+    "N= int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "UF = UnionFind(10**6)\n",
+    "ans=0\n",
+    "\n",
+    "for i in range(N//2):\n",
+    "    A_left = A[i]\n",
+    "    A_right = A[N-i-1]\n",
+    "\n",
+    "    if UF.same(A_left, A_right)==False:\n",
+    "        ans+=1\n",
+    "\n",
+    "        UF.merge(A_left, A_right)\n",
+    "print(ans)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N= int(input())\n",
+    "A = list(map(int, input().split())\n",
+    "\n",
+    "UF = UnionFind(10**6)\n",
+    "ans=0\n",
+    "\n",
+    "# // divide to answer integer type\n",
+    "for i in range(N//2):\n",
+    "    A_left = A[i]\n",
+    "    A_right = A[N-i-1]\n",
+    "\n",
+    "    if UF.same(A_left, A_right)==False:\n",
+    "        ans += 1\n",
+    "        UF.merge(A_left, A_right)\n",
+    "print(ans)\n",
+    "#not use group function\n",
+    "#not use size function\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
