--- a/principle of problem programmin'/cumulative_sum.ipynb
+++ b/principle of problem programmin'/cumulative_sum.ipynb
@@ -374,19 +374,25 @@
     "\n",
     "L = [None]*D\n",
     "R = [None]*D\n",
-    "for d i in range(D):\n",
+    "for d  in range(D):\n",
     "    L[d], R[d] = map(int, input().split())\n",
     "\n",
-    "P = [0]*(N+1)\n",
-    "Q = [0]*(N+1)\n",
+    "P = [None]*(N)\n",
+    "Q = [None]*(N)\n",
     "\n",
-    "# cumulative max(L, R)\n",
-    "for i in range(1, N+1):\n",
-    "    P[i] = max(A[i], A[i-1])\n",
-    "    Q[i] = max(A[-i], A[1-i])\n",
+    "P[0] = A[0]\n",
+    "Q[N-1] = A[N-1]\n",
+    "\n",
+    "for i in range(1, N):\n",
+    "    P[i] = max(P[i-1], A[i])\n",
+    "\n",
+    "for i in reversed(range(0, N-1)):\n",
+    "    Q[i] = max(Q[i+1], A[i])\n",
     "\n",
     "# ans\n",
-    "\n",
+    "for d in range(D):\n",
+    "    ans = max(P[(L[d]-1)-1], Q[(R[d]+1)-1])\n",
+    "    print(ans)\n",
     "    "
    ]
   },
