--- a/principle of problem programmin'/binary_search.ipynb
+++ b/principle of problem programmin'/binary_search.ipynb
@@ -31,6 +31,57 @@
     "answer = binary_search(X, A)\n",
     "print(answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A12\n",
+    "\n",
+    "def check(x, N, K, A):\n",
+    "    sum = 0\n",
+    "    for i in range(N):\n",
+    "        sum += x//A[i]\n",
+    "\n",
+    "    if sum >= K:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "Left = 1\n",
+    "Right = 10**9\n",
+    "\n",
+    "while Left < Right:\n",
+    "    Mid = (Left+ Right)//2\n",
+    "    Answer = check(Mid, N, K, A)\n",
+    "\n",
+    "    if Answer == False:\n",
+    "        Left = Mid+1\n",
+    "    if Answer ==True:\n",
+    "        Right = Mid\n",
+    "\n",
+    "print(Left) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
