--- a/principle of problem programmin'/binary_search.ipynb
+++ b/principle of problem programmin'/binary_search.ipynb
@@ -81,6 +81,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "R = [None]*N\n",
+    "\n",
+    "for i in range(0, N-1):\n",
+    "    if i ==0:\n",
+    "        R[i] =0\n",
+    "    else:\n",
+    "        R[i] = R[i-1]\n",
+    "\n",
+    "\n",
+    "    while R[i]< N-1 and A[R[i]+1]-A[i]<=K:\n",
+    "        R[i] += 1\n",
+    "\n",
+    "ans = 0\n",
+    "for i in range(0, N-1):\n",
+    "    ans = ans+R[i]-i\n",
+    "\n",
+    "print(ans)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input\n",
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "# R \n",
+    "R = A.copy()\n",
+    "\n",
+    "# all search\n",
+    "for i in range(N):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_17836\\3433766626.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mK\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
+     ]
+    }
+   ],
+   "source": [
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "R = [None]*N\n",
+    "for i in range(N):\n",
+    "    if i ==0:\n",
+    "        R[i] =0\n",
+    "    else:\n",
+    "        R[i] = A[R[i]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -91,7 +179,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.13"
   },
   "orig_nbformat": 4,
