--- a/principle of problem programmin'/binary_search.ipynb
+++ b/principle of problem programmin'/binary_search.ipynb
@@ -166,10 +166,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[2, 5, 8, 13, 13, 18, 25, 30]\n",
+      "3\n",
+      "[2, 5, 8, 13, 13, 18, 25, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "li = [2, 5, 8, 13, 13, 18, 25, 30]\n",
+    "\n",
+    "ind = bisect.bisect_left(li, 10)\n",
+    "print(ind)\n",
+    "print(li)\n",
+    "\n",
+    "ind = bisect.bisect_left(li, 13)\n",
+    "print(ind)\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# input\n",
+    "N, K  = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B  = list(map(int, input().split()))\n",
+    "C  = list(map(int, input().split()))\n",
+    "D  = list(map(int, input().split()))\n",
+    "# p(A+B), Q(C+D)\n",
+    "P=[]\n",
+    "Q =[]\n",
+    "\n",
+    "for a in range(len(A)):\n",
+    "    for b in range(len(B)):\n",
+    "        P.append(A[a]+B[b])\n",
+    "\n",
+    "for c in range(len(C)):\n",
+    "    for d in range(len(D)):\n",
+    "        Q.append(C[c]+D[d])\n",
+    "\n",
+    "# K-P[i] = Q\n",
+    "Q = Q.sort()\n",
+    "\n",
+    "\n",
+    "for i in range(N*N):\n",
+    "    if K-P[i] in Q:\n",
+    "        print('Yes')\n",
+    "        exit()\n",
+    "print('No')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input\n",
+    "#import sys\n",
+    "N, K  = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B  = list(map(int, input().split()))\n",
+    "C  = list(map(int, input().split()))\n",
+    "D  = list(map(int, input().split()))\n",
+    "# p(A+B), Q(C+D)\n",
+    "P=[]\n",
+    "Q =[]\n",
+    "\n",
+    "for a in range(N):\n",
+    "    for b in range(N):\n",
+    "        P.append(A[a]+B[b])\n",
+    "\n",
+    "for c in range(N):\n",
+    "    for d in range(N):\n",
+    "        Q.append(C[c]+D[d])\n",
+    "\n",
+    "# K-P[i] = Q\n",
+    "Q.sort()\n",
+    "\n",
+    "import bisect\n",
+    "for i in range(len(P)):\n",
+    "    pos1 = bisect.bisect_left(Q, K-P[i])\n",
+    "    if pos1<N*N and Q[pos1]==K-P[i]:\n",
+    "        print('Yes')\n",
+    "        exit()\n",
+    "\n",
+    "print('No')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bisect\n",
+    "import sys\n",
+    "\n",
+    "# 入力\n",
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "C = list(map(int, input().split()))\n",
+    "D = list(map(int, input().split()))\n",
+    "\n",
+    "# 配列 P を作成\n",
+    "P = []\n",
+    "for x in range(N):\n",
+    "\tfor y in range(N):\n",
+    "\t\tP.append(A[x] + B[y])\n",
+    "\n",
+    "# 配列 Q を作成\n",
+    "Q = []\n",
+    "for z in range(N):\n",
+    "\tfor w in range(N):\n",
+    "\t\tQ.append(C[z] + D[w])\n",
+    "\n",
+    "# 配列 Q を小さい順にソート\n",
+    "Q.sort()\n",
+    "\n",
+    "# 二分探索\n",
+    "for i in range(len(P)):\n",
+    "\tpos1 = bisect.bisect_left(Q, K-P[i])\n",
+    "\tif pos1<N*N and Q[pos1]==K-P[i]:\n",
+    "\t\tprint(\"Yes\")\n",
+    "\t\tsys.exit(0)\n",
+    "\n",
+    "# 見つからなかった場合\n",
+    "print(\"No\")"
+   ]
   }
  ],
  "metadata": {
