--- a/principle of problem programmin'/binary_search.ipynb
+++ b/principle of problem programmin'/binary_search.ipynb
@@ -307,6 +307,48 @@
     "# 見つからなかった場合\n",
     "print(\"No\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 0, 2: 1, 3: 2, 4: 3, 5: 4, 6: 5}\n",
+      "1 2 3 4 5 6 2 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    " A= [1,2,3,4,5,6,2,3,4]\n",
+    " D = {v: i for i, v in enumerate(sorted(set(A)))}\n",
+    " print(D)\n",
+    "ans = []\n",
+    " for a in A:\n",
+    "    ans.append(D[a]+1)\n",
+    "print(*ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "D = { v: i for i, v in enumerate(sorted(set(A))) }\n",
+    "\n",
+    "ans = []\n",
+    "# 答え\n",
+    "for a in A:\n",
+    "    ans.append(D[a]+1)\n",
+    "print(*ans)"
+   ]
   }
  ],
  "metadata": {
