--- a/principle of problem programmin'/DP.ipynb
+++ b/principle of problem programmin'/DP.ipynb
@@ -61,15 +61,103 @@
     "\n",
     "Answer2 = [str(i) for i in Answer]\n",
     "print(len(Answer))\n",
-    "print(*Answer2)\n"
+    "print(*Answer2)\n",
+    "# print(dp[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, S = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "dp = [[None]*(S+1) for i in range(N+1)]\n",
+    "dp[0][0] = True\n",
+    "# dp[i][j] : i=select card count, j = target number\n",
+    "\n",
+    "for i in range(1, S+1):\n",
+    "\tdp[0][i] = False\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    for j in range(0, S+1):\n",
+    "        if j < A[i-1]:\n",
+    "            if dp[i-1][j] ==True:\n",
+    "                dp[i][j] = True\n",
+    "            else:\n",
+    "                dp[i][j]=False\n",
+    "                \n",
+    "        if j >= A[i-1]:\n",
+    "            if dp[i-1][j] == True or dp[i-1][j-A[i-1]] == True:\n",
+    "\t\t\t\tdp[i][j] = True\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tdp[i][j] = False\n",
+    "\n",
+    "# 出力\n",
+    "if dp[N][S] == True:\n",
+    "\tprint(\"Yes\")\n",
+    "else:\n",
+    "\tprint(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 入力\n",
+    "N, S = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "# 動的計画法（i=0）\n",
+    "dp = [ [ None ] * (S + 1) for i in range(N + 1) ]\n",
+    "dp[0][0] = True\n",
+    "for i in range(1, S+1):\n",
+    "\tdp[0][i] = False\n",
+    "\n",
+    "# 動的計画法（i=1）\n",
+    "for i in range(1, N+1):\n",
+    "\tfor j in range(0,S+1):\n",
+    "\t\tif j < A[i-1]:\n",
+    "\t\t\tif dp[i-1][j] == True:\n",
+    "\t\t\t\tdp[i][j] = True\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tdp[i][j] = False\n",
+    "\n",
+    "\t\tif j >= A[i-1]:\n",
+    "\t\t\tif dp[i-1][j] == True or dp[i-1][j-A[i-1]] == True:\n",
+    "\t\t\t\tdp[i][j] = True\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tdp[i][j] = False\n",
+    "\n",
+    "# 出力\n",
+    "if dp[N][S] == True:\n",
+    "\tprint(\"Yes\")\n",
+    "else:\n",
+    "\tprint(\"No\")\n"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.7.13 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.7.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "08a8b3365c8794cd169c696eb07d244554fc02b68625288d9805fd473ed8453a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
