--- a/principle of problem programmin'/DP.ipynb
+++ b/principle of problem programmin'/DP.ipynb
@@ -225,17 +225,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6396\\1042876841.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#dp[i][j] : target count to reach (i, j)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6396\\4082600306.py\u001b[0m in \u001b[0;36minput\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mIN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0miter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mInput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mIN\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "S = input()\n",
+    "T = input()\n",
+    "\n",
+    "#dp[i][j] : target count to reach (i, j)\n",
+    "\n",
+    "I = len(S)+1\n",
+    "J = len(T)+1\n",
+    "dp = [[-1]*(J) for i in range(I)]\n",
+    "dp[0][0] = 0\n",
+    "\n",
+    "for i in range(I):\n",
+    "    for j in range(J):\n",
+    "        if i>=1 and j>=1 and S[i-1] == T[j-1]:\n",
+    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1], dp[i-1][j-1]+1)\n",
+    "        elif i>=1 and j>=1:\n",
+    "            dp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
+    "        elif i >= 1:\n",
+    "            dp[i][j] = dp[i-1][j]\n",
+    "        elif j >= 1:\n",
+    "            dp[i][j] = dp[i][j-1]\n",
+    "\n",
+    "print(dp[I-1][J-1])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "S = input()\n",
+    "T = input()\n",
+    "N = len(S)+1\n",
+    "M = len(T)+1\n",
+    "\n",
+    "# 動的計画法\n",
+    "dp = [ [-1] * (M) for i in range(N) ]\n",
+    "dp[0][0] = 0\n",
+    "for i in range(0, N):\n",
+    "\tfor j in range(0,M):\n",
+    "\t\tif i>=1 and j>=1 and S[i-1]==T[j-1]:\n",
+    "\t\t\tdp[i][j] = max(dp[i-1][j], dp[i][j-1], dp[i-1][j-1]+1)\n",
+    "\t\telif i>=1 and j>=1:\n",
+    "\t\t\tdp[i][j] = max(dp[i-1][j], dp[i][j-1])\n",
+    "\t\telif i>=1:\n",
+    "\t\t\tdp[i][j] = dp[i-1][j]\n",
+    "\t\telif j>=1:\n",
+    "\t\t\tdp[i][j] = dp[i][j-1]\n",
+    "\n",
+    "# 出力\n",
+    "print(dp[N-1][M-1])"
+   ]
   }
  ],
  "metadata": {
